Fixed modal z-index

--- a/client/src/Styles/Modal.scss
+++ b/client/src/Styles/Modal.scss
@@ -1,6 +1,6 @@
 .Modal-bg{
     background-color: black;
-    z-index: 3;
+    z-index: 11;
     opacity: 0.5;
     position: absolute;
     top: 0;
@@ -16,7 +16,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 4;
+    z-index: 12;
     border-radius: 8px;
     overflow: auto;
 }
